@@ -55,3 +55,4 @@ Vikram Narayanan <vikram186@gmail.com>
 Seong-ho Cho (DarkCircle) <darkcircle.0426@gmail.com>
 Patryk Kaczmarek <patryk.k@samsung.com>
 Daniel Willmann <d.willmann@samsung.com>
+Michal Pakula vel Rutka <m.pakula@samsung.com>
