@@ -37,6 +37,7 @@ Fixes:
      - ecore_x_randr to actually return crtcs properly.
      - ecore_x_randr to actually return crtcs possible outputs properly.
      - ecore_x_randr to actually return crtcs outputs properly.
+     - send ECORE_X_EVENT_SELECTION_NOTIFY even if there is no data.
 
 Improvements:
 
